--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
@@ -575,3 +575,11 @@ notes:
       $$
       y = e^x
       $$
+- id: 1542745817208
+  fields:
+    Front: |
+      CCAC 01.6 61f: Starting with the graph of $y = \ln{x}$, find the equation of the graph that results from reflecting about the $x$ axis and then about the line $y = x$.
+    Back: |
+      $$
+      y = e^{-x}
+      $$
