--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-5.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-5.yml
@@ -132,7 +132,7 @@ notes:
   useMarkdown: pweave
   fields:
     Front: |
-      CCAC 01.5 07: Plot the functions below on a common graph. How are they related?
+      CCAC 01.5 07: Graph the functions below on a common plot. How are they related?
       $$
       y = 2^x, \ y = e^x, \ y = 5^x, \ y = 20^x
       $$
@@ -162,7 +162,7 @@ notes:
   useMarkdown: pweave
   fields:
     Front: |
-      CCAC 01.5 09: Plot the functions below on a common graph. How are they related?
+      CCAC 01.5 09: Graph the functions below on a common plot. How are they related?
       $$
       y = 3^x, \ y = 10^x, \ y = \left(\frac{1}{3}\right)^x, \ y = \left(\frac{1}{10}\right)^x
       $$
