--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-7.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-7.yml
@@ -349,3 +349,56 @@ notes:
 
       p._backend.show()
       ```
+- id: 1543349723594
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.7 15:
+      a. Eliminate the parameter to find a Cartesian equation of the curve.
+      $$
+      x = \sin{\theta}, \ y = \cos{2\theta}
+      $$
+      b. Sketch the curve, and indicate with an arrow the direction in which the curve is traced as the parameter increases.
+    Back: |
+      a. $y = 1 - 2x^2$, $-1 \le x \le 1$
+      b.
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+      import math
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      def fx(t): return sy.sin(t)
+      def fy(t): return sy.cos(2*t)
+      def ffx(t): return math.sin(t)
+      def ffy(t): return math.cos(2*t)
+      def aro(ax, fx, fy, s, d, w):
+        def dx(a,b): return fx(b) - fx(a)
+        def dy(a,b): return fy(b) - fy(a)
+        return ax.arrow(fx(s-d), fy(s-d), dx(s-d, s+d), dy(s-d, s+d), head_width = w)
+
+      t = sy.symbols('t')
+      p = sy.plotting.plot_parametric(
+        (fx(t), fy(t), (t, -sy.pi, sy.pi)),
+        xlim = (-3, 3), ylim = (-1.5, 1.5),
+        xlabel = '$x$', ylabel = '$y$',
+        show = False,
+      )
+
+      if hasattr(p, '_backend'): p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+
+      aro(ax, ffx, ffy, -math.pi/4, 0.1, 0.10)
+      aro(ax, ffx, ffy, math.pi/4, 0.1, 0.10)
+      aro(ax, ffx, ffy, -3*math.pi/4, 0.1, 0.10)
+      aro(ax, ffx, ffy, 3*math.pi/4, 0.1, 0.10)
+      ax.plot(ffx(-math.pi/2), ffy(-math.pi/2), 'ko', markersize = 4)
+      ax.plot(ffx(math.pi/2), ffy(math.pi/2), 'ko', markersize = 4)
+      ax.text(ffx(-math.pi/2)+0.1, ffy(-math.pi/2)+0.1, '(-1,-1)')
+      ax.text(ffx(math.pi/2)+0.1, ffy(math.pi/2)+0.1, '(1,-1)')
+
+      p._backend.show()
+      ```
