--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-7.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-7.yml
@@ -402,3 +402,12 @@ notes:
 
       p._backend.show()
       ```
+- id: 1543349943294
+  fields:
+    Front: |
+      CCAC 01.7 17: Describe the motion of a particle with position $(x,y)$ as $t$ varies in the given interval.
+      $$
+      x = 3 + 2\cos{t}, \ y = 1 + 2\sin{t}, \ \pi/2 \le t \le 3\pi/2
+      $$
+    Back: |
+      Moves counterclockwise along the circle $(x-3)^2 + (y-1)^2 = 4$ from $(3,3)$ to $(3,-1)$.
