--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-7.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-7.yml
@@ -426,3 +426,88 @@ notes:
       CCAC 01.7 21: Suppose a curve is given by the parametric equations $x=f(t)$, $y=g(t)$, where the range of $f$ is $[1,4]$ and the range of $g$ is $[2,3]$. What can you say about the curve?
     Back: |
       It is contained in the rectangle described by $1 \le x \le 4$ and $2 \le y \le 3$.
+- id: 1543351003944
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.7 23: Use the graphs of $x=f(t)$ and $y=g(t)$ below to sketch the parametric curve $x=f(t), \ y=g(t)$. Indicate with arrows the direction in which the curve is traced as $t$ increases.
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      t = sy.symbols('t')
+      p = sy.plot(
+        t**2 - 1,
+        xlim = (-3, 3),
+        ylim = (-2, 2),
+        xlabel = '$t$',
+        ylabel = '$x$',
+      )
+      ```
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      t = sy.symbols('t')
+      p = sy.plot(
+        t**3,
+        xlim = (-3, 3),
+        ylim = (-2, 2),
+        xlabel = '$t$',
+        ylabel = '$y$',
+      )
+      ```
+    Back: |
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      def fx(t): return t**2 - 1
+      def fy(t): return t**3
+      def aro(ax, fx, fy, s, d, w):
+        def dx(a,b): return fx(b) - fx(a)
+        def dy(a,b): return fy(b) - fy(a)
+        return ax.arrow(fx(s-d), fy(s-d), dx(s-d, s+d), dy(s-d, s+d), head_width = w)
+
+      t = sy.symbols('t')
+      p = sy.plotting.plot_parametric(
+        (fx(t), fy(t)),
+        xlim = (-3, 3),
+        ylim = (-2, 2),
+        xlabel = '$x$',
+        ylabel = '$y$',
+        show = False,
+      )
+
+      if hasattr(p, '_backend'): p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+
+      aro(ax, fx, fy, -1.15, 0.01, 0.10)
+      ax.plot(fx(-1), fy(-1), 'ko', markersize = 4)
+      ax.text(fx(-1)+0.1, fy(-1)+0.1, '(0,-1), $t=-1$')
+      ax.plot(fx(0), fy(0), 'ko', markersize = 4)
+      ax.text(fx(0)-0.1, fy(0)+0.1, '(0,1), $t=1$', horizontalalignment = 'right')
+      ax.plot(fx(1), fy(1), 'ko', markersize = 4)
+      ax.text(fx(1)+0.1, fy(1)-0.1, '(0,1), $t=1$')
+      aro(ax, fx, fy, 1.15, 0.01, 0.10)
+      ax.tick_params(
+        axis = 'both',
+        which = 'both',
+        bottom = False,
+        left = False,
+        labelbottom = False,
+        labelleft = False,
+      )
+
+      p._backend.show()
+      ```
