--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-7.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-7.yml
@@ -877,3 +877,89 @@ notes:
       p[1].line_color = 'blue'
       p.show()
       ```
+- id: 1543438171219
+  tags: [requiresCoding]
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.7 45: The curves with equations $x=a\sin{nt}$, $y=b\cos{t}$ are called **Lissajous figures**. Use software to investigate how these curves vary when $a$, $b$, and $n$ vary. (Take $n$ to be a positive integer.)
+    Back: |
+      As $n$ increases, the number of oscillations increases; $a$ and $b$ determine the width and height.
+      ```{python }
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      t = sy.symbols('t')
+      def f(t, n, a, b): return a*sy.sin(n*t), b*sy.cos(t)
+      p = sy.plotting.plot_parametric(
+        f(t, 1, 1, 1), f(t, 2, 1, 1), f(t, 3, 1, 1),
+        xlabel = '$x$', ylabel = '$y$',
+        show = False
+      )
+      p[0].line_color = 'red'
+      p[1].line_color = 'green'
+      p[2].line_color = 'blue'
+      p.show()
+      ```
+      ```{python }
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      t = sy.symbols('t')
+      def f(t, n, a, b): return a*sy.sin(n*t), b*sy.cos(t)
+      p = sy.plotting.plot_parametric(
+        f(t, 3, 1, 1), f(t, 3, 2, 1), f(t, 3, 3, 1),
+        xlabel = '$x$', ylabel = '$y$',
+        show = False
+      )
+      p[0].line_color = 'red'
+      p[1].line_color = 'green'
+      p[2].line_color = 'blue'
+      p.show()
+      ```
+      ```{python }
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      t = sy.symbols('t')
+      def f(t, n, a, b): return a*sy.sin(n*t), b*sy.cos(t)
+      p = sy.plotting.plot_parametric(
+        f(t, 2, 1, 1), f(t, 2, 1, 2), f(t, 2, 1, 3),
+        xlabel = '$x$', ylabel = '$y$',
+        show = False
+      )
+      p[0].line_color = 'red'
+      p[1].line_color = 'green'
+      p[2].line_color = 'blue'
+      p.show()
+      ```
+      ```{python }
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      t = sy.symbols('t')
+      def f(t, n, a, b): return a*sy.sin(n*t), b*sy.cos(t)
+      p = sy.plotting.plot_parametric(
+        f(t, 3, 1, 1),
+        f(t, 3, 2, 2),
+        f(t, 3, 3, 3),
+        xlabel = '$x$', ylabel = '$y$',
+        show = False
+      )
+      p[0].line_color = 'red'
+      p[1].line_color = 'green'
+      p[2].line_color = 'blue'
+      p.show()
+      ```
