Add CCAC 01.Review 03

--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
@@ -279,3 +279,14 @@ notes:
       ```
     Back: |
       Odd; its graph is symmetric about the origin.
+- id: 1543450755145
+  fields:
+    Front: |
+      CCAC 01.Review 03: If $f(x) = x^2 - 2x + 3$, evaluate the difference quotient
+      $$
+      \frac{f(a + h) - f(a)}{h}
+      $$
+    Back: |
+      $$
+      2a + h - 2
+      $$
