--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
@@ -290,3 +290,10 @@ notes:
       $$
       2a + h - 2
       $$
+- id: 1543450755269
+  tags: [Editing]
+  fields:
+    Front: |
+      CCAC 01.Review 05: Find the domain and range of the function $f(x) = 2/(3x - 1)$. Write your answer in interval notation.
+    Back: |
+      $(-\infty, \frac{1}{3}) \cup (\frac{1}{3}, \infty), \ (-\infty, 0) \cup (0, \infty)$
