--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
@@ -297,3 +297,11 @@ notes:
       CCAC 01.Review 05: Find the domain and range of the function $f(x) = 2/(3x - 1)$. Write your answer in interval notation.
     Back: |
       $(-\infty, \frac{1}{3}) \cup (\frac{1}{3}, \infty), \ (-\infty, 0) \cup (0, \infty)$
+- id: 1543450755369
+  fields:
+    Front: |
+      CCAC 01.Review 07: Find the domain and range of the function $h(x) = \ln(x + 6)$. Write your answer in interval notation.
+    Back: |
+      $$
+      (-6, \infty), \ \mathbb{R}
+      $$
