--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
@@ -305,3 +305,9 @@ notes:
       $$
       (-6, \infty), \ \mathbb{R}
       $$
+- id: 1543450755473
+  fields:
+    Front: |
+      CCAC 01.Review 09a: Suppose that the graph of $f$ is given. Describe how the graph of the function $y = f(x) + 8$ can be obtained from the graph of $f$.
+    Back: |
+      Shift the graph 8 units upward.
