--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
@@ -329,3 +329,9 @@ notes:
       CCAC 01.Review 09d: Suppose that the graph of $f$ is given. Describe how the graph of the function $y = f(x - 2) - 2$ can be obtained from the graph of $f$.
     Back: |
       Shift the graph 2 units to the right and 2 units downward.
+- id: 1543450755869
+  fields:
+    Front: |
+      CCAC 01.Review 09e: Suppose that the graph of $f$ is given. Describe how the graph of the function $y = -f(x)$ can be obtained from the graph of $f$.
+    Back: |
+      Reflect the graph about the $x$-axis.
